# AXON_LINUX_BRIDGE

./: .gitignore  BRIDGE_BUG_ROUND4_DEBUGGING.md  BRIDGE_CONNECTION_INFO.txt  BRIDGE_CRITICAL_FIX_ROUND4.md  BRIDGE_CRITICAL_FIX_ROUND5.md  BRIDGE_IMPLEMENTATION.md  BRIDGE_TEAM_INSTRUCTIONS.md  BRIGHTNESS_CONTROL_GUIDE.md  BUILD_AND_DEPLOY_STATUS.txt  CHANGELOG.md  CLOSEAPP_FIX_COMPLETE.md  CLOSE_APPLICATION_RPC.md  COMPLETE_BRIDGE_INTEGRATION_PACKAGE.md  CORE_HUB_TEAM_INFO.md  Cargo.toml  DEPLOYMENT_GUIDE_V3.1.md  DESKTOP_UI_IMPLEMENTATION.md  DIAGNOSIS_SUMMARY.md  FIX_SUMMARY_LAUNCH_FALLBACK.md  FOR_MAC_HUB_TEAM.md  GETFRAME_BLOCKING_FIX.md  GITHUB_ROUND3_PUSHED.md  GITHUB_ROUND4_PUSHED.md  GITHUB_UPDATE_SUCCESS.md  IMPLEMENTATION_AUDIT.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_GUIDE_V2.2_TO_V2.5.md  INSTALLATION_GUIDE.md  MAC_AGENT_REPORT.md  MAC_HUB_INTEGRATION_GUIDE.md  MAC_TEAM_EXECUTIVE_SUMMARY.md  MAC_TEAM_QUICK_REFERENCE.md  MAC_TEAM_V3.1_INTEGRATION_GUIDE.md  MAC_TEAM_agent_v3.1.proto  MEDIA_CONTROL_GUIDE.md  MESSAGE_FOR_MAC_TEAM.md  PAIRING_INTEGRATION.md  PERFORMANCE_OPTIMIZATION_V3.1.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  (+42 more)
osworld_test_setup/: SETUP.md  run_axonhub_official.py
osworld_test_setup/mm_agents/: axonhub_text_first_agent.py
proto/: agent.proto
src/: advanced_metrics.rs  agent.rs  batch.rs  cancellation.rs  capture.rs  desktop_apps.rs  grpc_service.rs  health.rs  input_lock.rs  lib.rs  main.rs  metrics.rs  notifications.rs  parallel_batch.rs  platform.rs  proto_gen.rs  rate_limit.rs  system_tray.rs  validation.rs
src/a11y/: capture.rs  mod.rs  normalizer.rs  parser.rs
src/audio/: av_sync.rs  coreaudio_ffi.rs  encoder.rs  grpc_streaming.rs  linux.rs  macos.rs  macos_capture.rs  mod.rs  pulseaudio_capture.rs  pulseaudio_ffi.rs  ring_buffer.rs  stream_manager.rs  wasapi_capture.rs  wasapi_ffi.rs  windows.rs  windows_old.rs
src/capture/: cache.rs  compression.rs  diff.rs  diff_manager.rs  linux.rs  macos.rs  retry.rs  windows.rs  windows_impl.rs
src/clipboard/: linux.rs  macos.rs  mod.rs  windows.rs
src/input/: keyboard.rs  linux.rs  macos_keys.rs  mod.rs  mouse.rs
src/streaming/: mod.rs  stream_manager.rs
src/system_control/: brightness.rs  media.rs  mod.rs  volume.rs
src/system_control/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/validation/: batch.rs
src/video/: encoder.rs  frame.rs  mod.rs  videotoolbox_ffi.rs
tests/: e2e_system_control.rs
