[package]
name = "axon-desktop-agent"
version = "0.1.0"
edition = "2021"
authors = ["AxonHub Contributors"]
description = "Desktop capture agent for AxonHub"
license = "AGPL-3.0-only"

[[bin]]
name = "axon-desktop-agent"
path = "src/main.rs"

[lib]
name = "axon_desktop_agent"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# gRPC for IPC
tonic = "0.10"
prost = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Hostname detection
hostname = "0.3"

# Date/time handling
chrono = "0.4"

# Video encoding
libc = "0.2"
# H.264 encoding (software fallback)
openh264 = { version = "0.5", optional = true }

# HTTP client
reqwest = { version = "0.11", features = ["blocking"] }

# A11y tree parsing
quick-xml = "0.31"
regex = "1.10"

# Universal app launcher
fuzzy-matcher = "0.3.7"
configparser = "3.1"
dirs = "5.0"

# WebRTC dependencies (conditional)
webrtc = { version = "0.9", optional = true }
bytes = "1.5"

# Platform-specific (conditional compilation)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_Foundation",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
cocoa = "0.25"
objc = "0.2"
# Universal app launcher for macOS
plist = "1.7"
# ScreenCaptureKit bindings will be manual FFI for now

# Audio - CoreAudio framework will be linked manually
# core-audio = { version = "0.2", optional = true }  # Alternative if needed

# Audio encoding
# audiopus = "0.3.0-rc.0"  # TODO: Re-enable when CMake version issue resolved

[target.'cfg(target_os = "linux")'.dependencies]
# Screen capture via XDG Desktop Portal + PipeWire
# ashpd = "0.9"
# pipewire = "0.8"
# futures = "0.3"  # For async executor in portal calls
# Alternative: xcap for simpler cross-platform capture
# xcap = "0.0.10"

[build-dependencies]
tonic-build = "0.10"

[features]
default = ["h264", "webrtc"]
h264 = ["openh264"]
webrtc = ["dep:webrtc"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
