[package]
name = "axonbridge-linux"
version = "1.0.0"
edition = "2021"
authors = ["AxonHub Team"]
description = "Production-ready Linux Bridge for AxonHub OSWorld integration"
license = "MIT"

[[bin]]
name = "axonbridge"
path = "src/main.rs"

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# gRPC
tonic = "0.10"
prost = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.13"
toml = "0.8"

# Utilities
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
hostname = "0.3"
tokio-stream = "0.1"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }

# Desktop UI
ksni = "0.2"              # System tray icon (KDE/GNOME compatible)
notify-rust = "4.11"      # Desktop notifications

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
